# cloud_security_misconfiguration_lab

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cloud_analysis/: __init__.py  summary.py  test_summary.py
cloud_benchmarks/: __init__.py  benchmark-manifest-v1.0.json  coverage_gate.py  manifest_builder.py  models.py  profiles.py  runner.py
cloud_findings/: __init__.py  finding.py  test_finding.py
cloud_incidents/: __init__.py  incident.py  test_incident.py
cloud_inputs/: __init__.py  bounds.py  test_bounds.py  test_validation.py  validation.py
cloud_remediation/: __init__.py  plan.py  test_plan.py
cloud_rules/: __init__.py  catalog.py  rules-v1.0.json  test_catalog.py
cloud_security_lab/: __init__.py  __main__.py  analysis.py  cli.py  test_analysis.py  test_cli.py
cloud_security_lab/normalizers/: __init__.py  cloudtrail.py  common.py  ec2.py  iam.py  network_context.py  s3.py  test_cloudtrail.py  test_ec2.py  test_iam.py  test_network_context.py  test_s3.py
cloud_timeline/: __init__.py  test_timeline.py  timeline.py
cloudtrail_detector/: README.md  __init__.py  correlation.py  detector.py  events.py  test_detector.py
docs/: analysis-coverage.md  architecture.md  attack-timeline.md  benchmarking.md  data-contracts.md  demo-walkthrough.md  design-decisions.md  detection-performance.md  documentation-quality.md  engineering.md  incident-correlation.md  input-resource-limits.md  known-limitations.md  native-aws-inputs.md  release-integrity.md  release-v2.0.0.md  release-v2.1.0.md  release-v2.1.1.md  remediation-prioritization.md  report-integrity.md  rule-catalog.md  simplified-input-validation.md  supply-chain.md  threat-model.md  traceability.md
iam_analyzer/: README.md  __init__.py  analyzer.py  test_analyzer.py
network_analyzer/: README.md  __init__.py  analyzer.py  test_analyzer.py
report_generator/: README.md  __init__.py  generate_report.py  test_generate_report.py
reports/: cloud_security_report_sample.md
sample_data/aws/: fixture-manifest-v1.0.json
sample_data/aws/cloudtrail/: 111122223333_CloudTrail_20260630T0200Z_part1.json
sample_data/aws/ec2/: describe_security_groups.json  network_reachability_context.json
sample_data/cloudtrail/: sample_cloudtrail_events.json
sample_data/iam/: sample_iam_environment.json
sample_data/network/: sample_network_environment.json
sample_data/storage/: sample_storage_environment.json
schemas/: analysis-summary-v1.0.schema.json  attack-timeline-v1.0.schema.json  aws-cloudtrail-records-v1.0.schema.json  aws-ec2-describe-security-groups-v1.0.schema.json  aws-fixture-manifest-v1.0.schema.json  aws-iam-authorization-details-v1.0.schema.json  aws-s3-evidence-bundle-v1.0.schema.json  benchmark-manifest-v1.0.schema.json  benchmark-results-v1.0.schema.json  cloudtrail-events-v1.0.schema.json  findings-v1.0.schema.json  findings-v2.0.schema.json  iam-environment-v1.0.schema.json  incidents-v1.0.schema.json  network-environment-v1.0.schema.json  network-reachability-context-v1.0.schema.json  remediation-plan-v1.0.schema.json  rule-catalog-v1.0.schema.json  storage-environment-v1.0.schema.json
storage_analyzer/: README.md  __init__.py  analyzer.py  test_analyzer.py
tests/: __init__.py  test_benchmarks.py  test_contracts.py  test_legacy_clis.py  test_markdown_links.py  test_release_evidence.py  test_rule_catalog.py  test_supply_chain.py
tools/: __init__.py  check_markdown_links.py  release_evidence.py
(+3 files in other folders)
